@@ -1,6 +1,13 @@
 # ChangeLog for net-nntp/sabnzbd
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*sabnzbd-0.7.17 (25 Mar 2014)
+
+  25 Mar 2014; Daniel Rune Jensen (soehest) <drunejensen@gmail.com>
+  -sabnzbd-0.7.11.ebuild, -sabnzbd-0.7.12.ebuild, -sabnzbd-0.7.13.ebuild,
+  -sabnzbd-0.7.14.ebuild, +sabnzbd-0.7.17.ebuild:
+  Version bump. Old ebuilds cleanup.
 
 *sabnzbd-0.7.16 (02 Sep 2013)
 
